# otio_tools

./: .gitignore  README.md  pyproject.toml
otio_tools/: lib.py
tests/: expected_data.yaml  test_lib.py
tests/otio_timelines/: 10-200_native.otio  10-50-200_native.otio  50-10-100_nonZeroStartTimecode_native.otio
