[tool.poetry]
name = "otio-tools"
version = "0.0.1-dev.0"
description = ""
authors = ["doerp <me@doerp.cool>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9.1,<3.10"
opentimelineio = "^0.15.0"
pytest = "^8.0.1"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
